adds welcome part

--- a/index.html
+++ b/index.html
@@ -26,5 +26,25 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="promote">
+            <p>Join Membership and get</p>
+            <P class="discount">10%</P>
+            <p>off</p>
+            <button type="button">Join Now</button>
+        </div>
+        <div class="welcome">
+            <picture class="home-banner">
+                <source media="(min-width: 600px)" srcset="images/home-banner.jpg"/>
+                <source media="(max-width: 599px)" srcset="images/home-banner-600_x_399.jpg"/>
+                <img src="images/home-banner.jpg" alt="image of aroma oil diffuser">
+            </picture>
+            <h2>Welcome to Dream Night</h2>
+            <p>
+                The home of luxurious and all-nature aroma oils designed to soothe your senses and transport you to a peaceful statete of mind.
+            </p>
+            <button type="button">Story about us</button>
+        </div>
+    </main>
 </body>
 </html>
