adds the service part

--- a/index.html
+++ b/index.html
@@ -45,6 +45,36 @@
             </p>
             <button type="button">Story about us</button>
         </div>
+        <div class="service">
+            <div class="mission">
+                <h2>Dream a better life</h2>
+                <p>We pride ourselves on using only the highest quality  ingredients to create our products, ensure that you can experience the full benefits of natural aromatherapy.</p>
+            </div>
+            <div class="equipment">
+                <picture>
+                    <source media="(min-width: 600px)" srcset="images/equipments.jpg"/>
+                    <source media="(max-width: 599px)" srcset="images/equipments-600_x_799.jpg"/>
+                    <img src="images/equipments.jpg" alt="image of aroma oil equipment">
+                </picture>
+                <p><a href="#">Equipment</a></p>
+            </div>
+            <div class="oil">
+                <picture>
+                    <source media="(min-width: 600px)" srcset="images/packaged-oil.jpg"/>
+                    <source media="(max-width: 599px)" srcset="images/packaged-oil-600_x_900.jpg"/>
+                    <img src="images/packaged-oil.jpg" alt="image of aroma oil equipment">
+                </picture>
+                <p><a href="#">Packaged Oil</a></p>
+            </div>
+            <div class="formula">
+                <picture>
+                    <source media="(min-width: 600px)" srcset="images/oil-formula.jpg"/>
+                    <source media="(max-width: 599px)" srcset="images/oil-formula-600_x_900.jpg"/>
+                    <img src="images/oil-formula.jpg" alt="image of aroma oil equipment">
+                </picture>
+                <p><a href="#">Original oil & Formula</a></p>
+            </div>
+        </div>
     </main>
 </body>
 </html>
