--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/342db6fee9.js" crossorigin="anonymous"></script>
     <title>Dream Night</title>
 </head>
 <body>
@@ -73,6 +74,56 @@
                     <img src="images/oil-formula.jpg" alt="image of aroma oil equipment">
                 </picture>
                 <p><a href="#">Original oil & Formula</a></p>
+            </div>
+        </div>
+        <div class="announcement">
+            <h2>We are Ready to go</h2>
+            <p>
+                Get ready to experience the ultimate in relaxation and self-care! Dream Night is proud to announce the opening of our first off-line store in Ottawa. 
+            </p>
+            <p>address <a href="#">Wellington St, Ottawa, ON K1A 0A9</a></p>
+            <p>Opening: Mon - Fri 08:00 - 18:00</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.4914178672984!2d-75.71181921012548!3d45.41959436183835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce045a7a4831e5%3A0xcb7f2bab75407e44!2sWellington%20St!5e0!3m2!1sen!2sca!4v1688007870948!5m2!1sen!2sca" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="activity">
+            <h2>Buy more save more</h2>
+            <p>Earn extra points with every purchase that can use towards future discounts. Save big with our membership program! For every </p>
+            <p>$10</p>
+            <p> spent, you'll earn</p>
+            <p>1</p>
+            <p>point. Once you'll earn </p>
+            <p>10</p>
+            <p> points, you'll get </p>
+            <p>5%</p>
+            <p> off your next purchase.</p>
+            <h3>Not a member yet?</h3>
+            <p>Get </p>
+            <p>10%</p>
+            <p> off</p>
+            <p>for your first month's purchase!</p>
+            <button type="button">Join Now</button>
+        </div>
+        <div class="pruduct">
+            <div>
+                <picture>
+                    <source media="(min-width: 600px)" srcset="images/commodity1.jpg"/>
+                    <source media="(max-width: 599px)" srcset="images/commodity1-600_x_900.jpg"/>
+                    <img src="images/commodity1.jpg" alt="image of aroma product">
+                </picture>
+                <button type="button">Buy Now</button>
+            </div>
+            <div>
+                <picture>
+                    <source media="(min-width: 600px)" srcset="images/commodity2.jpg"/>
+                    <source media="(max-width: 599px)" srcset="images/commodity2-600_x_900.jpg"/>
+                    <img src="images/commodity2.jpg" alt="image of aroma product">
+                </picture>
+                <button type="button">Buy Now</button>
+            </div>
+            <div class="pages">
+                <i class="fa-solid fa-circle"></i>
+                <i class="fa-regular fa-circle"></i>
+                <i class="fa-solid fa-chevron-right"></i>
             </div>
         </div>
     </main>
