--- a/index.html
+++ b/index.html
@@ -127,5 +127,18 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="contact">
+            <p>Tel: +1 (777) 777 7777</p>
+            <p><a href="#">Join Us</a></p>
+            <p><a href="#">Feedback</a></p>
+        </div>
+        <div class="follow">
+            <p>Ins: @dream-night-oil</p>
+            <p>F B: @dream-night-oil</p>
+        </div>
+        <hr>
+        <p>&copy; Copyright Dream Night Aroma Oil All Rights Reserved 2023</p>
+    </footer>
 </body>
 </html>
