adds link to contact & about and the html pages

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <ul>
                 <li>Home</li>
                 <li>Online Store</li>
-                <li>About</li>
-                <li>Contact</li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li>Cooperation</li>
                 <li>Career</li>
             </ul>
