adds same heaer and footer to contact & about page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Dream Night</h1>
         <nav>
             <ul>
-                <li>Home</li>
+                <li><a href="index.html">home-banner</a></li>
                 <li>Online Store</li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
