adds content to about page

--- a/about.html
+++ b/about.html
@@ -27,7 +27,37 @@
             </ul>
         </nav>
     </header>
-
+    <main>
+        <picture>
+            <source media="(min-width: 600px)" srcset="images/about-banner.jpg"/>
+            <source media="(max-width: 599px)" srcset="images/about-banner-boo_x_400.jpg"/>
+            <img src="images/about-banner.jpg" alt="image about our service">
+        </picture>
+        <div class="history">
+            <h2>History of Dream night</h2>
+            <p>Dream Night is an exquisite aroma oil brand designed for young ladies between the ages of 20-30 who love to explore DIY formulas.
+                </p>
+            <p>The brand's first offline store opened its doors in Ottawa earlier this year, inviting customers to experience the luxurious scents firsthand.</p>
+            <picture>
+                <source media="(min-width: 600px)" srcset="images/history-shop.jpg"/>
+                <source media="(max-width: 599px)" srcset="images/history-shop-600_x_400.jpg"/>
+                <img src="images/history-shop.jpg" alt="image about our shop">
+            </picture>
+        </div>
+        <div class="mission">
+            <p>"Help people feel relaxed and achieve a deep, restful sleep."</p>
+            <picture>
+                <source media="(min-width: 600px)" srcset="images/mission.jpg"/>
+                <source media="(min-width: 599px)" srcset="images/mission-600_x_400.jpg"/>
+                <img src="images/mission.jpg" alt="image of our mission">
+            </picture>
+        </div>
+        <div class="vision">
+            <h2>We Hope</h2>
+            <p>To create a world where women can easily and naturally incorporate self care practices into their busy lives, leading to increased happiness, productivity, and overall well-being.</p>
+            <button type="button">Shop now</button>
+        </div>
+    </main>
     <footer>
         <div class="contact">
             <p>Tel: +1 (777) 777 7777</p>
