--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <button type="button">Story about us</button>
         </div>
         <div class="service">
-            <div class="mission">
+            <div class="statement">
                 <h2>Dream a better life</h2>
                 <p>We pride ourselves on using only the highest quality  ingredients to create our products, ensure that you can experience the full benefits of natural aromatherapy.</p>
             </div>
