--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,76 @@
             </ul>
         </nav>
     </header>
-
+    <main>
+        <div class="contact-form">
+            <picture>
+                <source media="(min-width: 600px)" srcset="images/contact-banner.jpg"/>
+                <source media="(min-width: 599px)" srcset="images/contact-banner-600_x_377.jpg"/>
+                <img src="images/contact-banner.jpg" alt="image of night sky">
+            </picture>
+            <p>At Dream Night, we value your feedback and strive to provide the best possible customer experience.</p>
+            <p>Don't hesitate to reach out to us. we're always happy to assist you with any inquiries or concerns.</p>
+            <form action="contact.html" method="post">
+                <div>
+                    <label for="fullname">Name</label>
+                    <input id="fullname" name="fullname" type="text" placeholder="First & Last" required>
+                </div>
+                <div>
+                    <label for="email">Email</label>
+                    <input id="email" name="email" type="email" placeholder="Email address" required>
+                </div>
+                <div>
+                    <label for="phone">Phone</label>
+                    <input id="phone" name="phone" type="tel" placeholder="Your phone number" required>
+                </div>
+                <div>
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                </div>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+        <div class="contact-info">
+            <p>Tel</p>
+            <p>+1 (777) 777 7777</p>
+            <p>Available: Mon to Fri 9:00 - 17:00</p>
+        </div>
+        <div class="address-info">
+            <p>Add</p>
+            <p>Wellington St, Ottawa, ON</p>
+            <p>Opening: Mon to Fri 8:00 - 18:00</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.4914178672984!2d-75.71181921012548!3d45.41959436183835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce045a7a4831e5%3A0xcb7f2bab75407e44!2sWellington%20St!5e0!3m2!1sen!2sca!4v1688007870948!5m2!1sen!2sca" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="statement-info">
+            <p>Please feel free to email us at <a href="mailto:info@dreamnight.com">info@dreamnight.com</a> with any questions or concerns. We aim to respond to all customer inquiries within 24 hours.</p>
+            <p>You can also contact us at Instagram: <a href="https://www.instagram.com/clark_shen22/">@dream-night-oil</a> and Facebook: <a href="https://www.facebook.com/profile.php?id=100090278334237">@dream- night-oil</a></p>
+        </div>
+        <div class="faq">
+            <h2>FAQ</h2>
+            <div>
+                <h3>What is Dream Night?</h3>
+                <p>Dream Night is an aroma oil brand that supports DIY formulas. We offer a wide range of high-quality aroma oils that can be used in a variety of applications, such as diffusers, candles, and beauty products.</p>
+            </div>
+            <div>
+                <h3>How do I use Dream Night aroma oils?</h3>
+                <p>Our aroma oils can be used in a variety of ways, depending on the application. For example, you can add a few drops of oil to a diffuser to fill your space with a pleasant scent, or mix the oils with carrier oils to create your own beauty and wellness products.
+                </p>
+            </div>
+            <div>
+                <h3>Are Dream Night products safe?</h3>
+                <p>Yes, our aroma oils are made with high-quality ingredients and are safe for use in a variety of applications. However, it's important to follow the instructions on the product packaging and use the oils in a well-ventilated area.</p>
+            </div>
+            <div>
+                <h3>Where can I buy Dream Night products?</h3>
+                <p>Our products are available for purchase online through our website, or at our physical store in Ottawa, Canada.</p>
+            </div>
+            <div>
+                <h3>Can I use Dream Night oils for aromatherapy?</h3>
+                <p>Yes, our oils can be used for aromatherapy purposes. However, we recommend consulting with a qualified aromatherapist before using our oils for therapeutic purposes.</p>
+            </div>
+            <p><a href="#">See more FAQs</a></p>
+        </div>
+    </main>
     <footer>
         <div class="contact">
             <p>Tel: +1 (777) 777 7777</p>
