--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <h1>Dream Night</h1>
         <nav>
             <ul>
-                <li><a href="index.html">home-banner</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li>Online Store</li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
