--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/342db6fee9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="main.css">
     <title>Dream Night</title>
 </head>
 <body>
