--- a/index.html
+++ b/index.html
@@ -8,138 +8,140 @@
     <title>Dream Night</title>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 137.42 59.21">
-                <path d="M27.77 25.07c.3 10.62-8.33 19.24-18.94 19.53-3.16.09-6.16-.61-8.83-1.89 5.04 6.95 13.32 11.38 22.55 11.12 14.86-.41 26.58-12.8 26.17-27.66C48.3 11.31 35.92-.4 21.05.01 14.57.19 8.68 2.65 4.14 6.61c1.17-.26 2.38-.42 3.62-.45 10.62-.3 19.72 8.3 20.01 18.92Z"/>
-                <text style="font-family:Broadway,Broadway;font-size:30px" transform="translate(48.8 51.77)"><tspan x="0" y="0" style="letter-spacing:-.03em">r</tspan><tspan x="14.88" y="0">eam</tspan></text>
-                <path d="m73.01 19.93-4.35 2.83-.13 5.18-4.04-3.26-4.97 1.47 1.86-4.84-2.94-4.28 5.18.27 3.16-4.11 1.34 5.01 4.89 1.73zM103.78 9.33l-3.52 3.81 1.14 5.06-4.71-2.17-4.46 2.64.61-5.15-3.89-3.42 5.08-1.01 2.06-4.76 2.53 4.52 5.16.48zM132.33 22.15l-4.35 2.83-.14 5.18-4.03-3.26-4.97 1.47 1.86-4.84-2.94-4.28 5.18.27 3.16-4.11 1.34 5.01 4.89 1.73z"/>
-              </svg>
-        </div>
-        <h1>Dream Night</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li>Online Store</li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li>Cooperation</li>
-                <li>Career</li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="promote">
-            <p>Join Membership and get</p>
-            <P class="discount">10%</P>
-            <p>off</p>
-            <button type="button">Join Now</button>
-        </div>
-        <div class="welcome">
-            <picture class="home-banner">
-                <source media="(min-width: 600px)" srcset="images/home-banner.jpg"/>
-                <source media="(max-width: 599px)" srcset="images/home-banner-600_x_399.jpg"/>
-                <img src="images/home-banner.jpg" alt="image of aroma oil diffuser">
-            </picture>
-            <h2>Welcome to Dream Night</h2>
-            <p>
-                The home of luxurious and all-nature aroma oils designed to soothe your senses and transport you to a peaceful statete of mind.
-            </p>
-            <button type="button">Story about us</button>
-        </div>
-        <div class="service">
-            <div class="statement">
-                <h2>Dream a better life</h2>
-                <p>We pride ourselves on using only the highest quality  ingredients to create our products, ensure that you can experience the full benefits of natural aromatherapy.</p>
+    <div class="wrapper">
+        <header>
+            <div class="logo">
+                <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 137.42 59.21">
+                    <path d="M27.77 25.07c.3 10.62-8.33 19.24-18.94 19.53-3.16.09-6.16-.61-8.83-1.89 5.04 6.95 13.32 11.38 22.55 11.12 14.86-.41 26.58-12.8 26.17-27.66C48.3 11.31 35.92-.4 21.05.01 14.57.19 8.68 2.65 4.14 6.61c1.17-.26 2.38-.42 3.62-.45 10.62-.3 19.72 8.3 20.01 18.92Z"/>
+                    <text style="font-family:Broadway,Broadway;font-size:30px" transform="translate(48.8 51.77)"><tspan x="0" y="0" style="letter-spacing:-.03em">r</tspan><tspan x="14.88" y="0">eam</tspan></text>
+                    <path d="m73.01 19.93-4.35 2.83-.13 5.18-4.04-3.26-4.97 1.47 1.86-4.84-2.94-4.28 5.18.27 3.16-4.11 1.34 5.01 4.89 1.73zM103.78 9.33l-3.52 3.81 1.14 5.06-4.71-2.17-4.46 2.64.61-5.15-3.89-3.42 5.08-1.01 2.06-4.76 2.53 4.52 5.16.48zM132.33 22.15l-4.35 2.83-.14 5.18-4.03-3.26-4.97 1.47 1.86-4.84-2.94-4.28 5.18.27 3.16-4.11 1.34 5.01 4.89 1.73z"/>
+                  </svg>
             </div>
-            <div class="equipment">
-                <picture>
-                    <source media="(min-width: 600px)" srcset="images/equipments.jpg"/>
-                    <source media="(max-width: 599px)" srcset="images/equipments-600_x_799.jpg"/>
-                    <img src="images/equipments.jpg" alt="image of aroma oil equipment">
+            <h1>Dream Night</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li>Online Store</li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li>Cooperation</li>
+                    <li>Career</li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div class="promote">
+                <p>Join Membership and get</p>
+                <P class="discount">10%</P>
+                <p>off</p>
+                <button type="button">Join Now</button>
+            </div>
+            <div class="welcome">
+                <picture class="home-banner">
+                    <source media="(min-width: 600px)" srcset="images/home-banner.jpg"/>
+                    <source media="(max-width: 599px)" srcset="images/home-banner-600_x_399.jpg"/>
+                    <img src="images/home-banner.jpg" alt="image of aroma oil diffuser">
                 </picture>
-                <p><a href="#">Equipment</a></p>
+                <h2>Welcome to Dream Night</h2>
+                <p>
+                    The home of luxurious and all-nature aroma oils designed to soothe your senses and transport you to a peaceful statete of mind.
+                </p>
+                <button type="button">Story about us</button>
             </div>
-            <div class="oil">
-                <picture>
-                    <source media="(min-width: 600px)" srcset="images/packaged-oil.jpg"/>
-                    <source media="(max-width: 599px)" srcset="images/packaged-oil-600_x_900.jpg"/>
-                    <img src="images/packaged-oil.jpg" alt="image of aroma oil equipment">
-                </picture>
-                <p><a href="#">Packaged Oil</a></p>
+            <div class="service">
+                <div class="statement">
+                    <h2>Dream a better life</h2>
+                    <p>We pride ourselves on using only the highest quality  ingredients to create our products, ensure that you can experience the full benefits of natural aromatherapy.</p>
+                </div>
+                <div class="equipment">
+                    <picture>
+                        <source media="(min-width: 600px)" srcset="images/equipments.jpg"/>
+                        <source media="(max-width: 599px)" srcset="images/equipments-600_x_799.jpg"/>
+                        <img src="images/equipments.jpg" alt="image of aroma oil equipment">
+                    </picture>
+                    <p><a href="#">Equipment</a></p>
+                </div>
+                <div class="oil">
+                    <picture>
+                        <source media="(min-width: 600px)" srcset="images/packaged-oil.jpg"/>
+                        <source media="(max-width: 599px)" srcset="images/packaged-oil-600_x_900.jpg"/>
+                        <img src="images/packaged-oil.jpg" alt="image of aroma oil equipment">
+                    </picture>
+                    <p><a href="#">Packaged Oil</a></p>
+                </div>
+                <div class="formula">
+                    <picture>
+                        <source media="(min-width: 600px)" srcset="images/oil-formula.jpg"/>
+                        <source media="(max-width: 599px)" srcset="images/oil-formula-600_x_900.jpg"/>
+                        <img src="images/oil-formula.jpg" alt="image of aroma oil equipment">
+                    </picture>
+                    <p><a href="#">Original oil & Formula</a></p>
+                </div>
             </div>
-            <div class="formula">
-                <picture>
-                    <source media="(min-width: 600px)" srcset="images/oil-formula.jpg"/>
-                    <source media="(max-width: 599px)" srcset="images/oil-formula-600_x_900.jpg"/>
-                    <img src="images/oil-formula.jpg" alt="image of aroma oil equipment">
-                </picture>
-                <p><a href="#">Original oil & Formula</a></p>
+            <div class="announcement">
+                <h2>We are Ready to go</h2>
+                <p>
+                    Get ready to experience the ultimate in relaxation and self-care! Dream Night is proud to announce the opening of our first off-line store in Ottawa. 
+                </p>
+                <p>address <a href="#">Wellington St, Ottawa, ON K1A 0A9</a></p>
+                <p>Opening: Mon - Fri 08:00 - 18:00</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.4914178672984!2d-75.71181921012548!3d45.41959436183835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce045a7a4831e5%3A0xcb7f2bab75407e44!2sWellington%20St!5e0!3m2!1sen!2sca!4v1688007870948!5m2!1sen!2sca" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-        </div>
-        <div class="announcement">
-            <h2>We are Ready to go</h2>
-            <p>
-                Get ready to experience the ultimate in relaxation and self-care! Dream Night is proud to announce the opening of our first off-line store in Ottawa. 
-            </p>
-            <p>address <a href="#">Wellington St, Ottawa, ON K1A 0A9</a></p>
-            <p>Opening: Mon - Fri 08:00 - 18:00</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.4914178672984!2d-75.71181921012548!3d45.41959436183835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce045a7a4831e5%3A0xcb7f2bab75407e44!2sWellington%20St!5e0!3m2!1sen!2sca!4v1688007870948!5m2!1sen!2sca" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div class="activity">
-            <h2>Buy more save more</h2>
-            <p>Earn extra points with every purchase that can use towards future discounts. Save big with our membership program! For every </p>
-            <p>$10</p>
-            <p> spent, you'll earn</p>
-            <p>1</p>
-            <p>point. Once you'll earn </p>
-            <p>10</p>
-            <p> points, you'll get </p>
-            <p>5%</p>
-            <p> off your next purchase.</p>
-            <h3>Not a member yet?</h3>
-            <p>Get </p>
-            <p>10%</p>
-            <p> off</p>
-            <p>for your first month's purchase!</p>
-            <button type="button">Join Now</button>
-        </div>
-        <div class="pruduct">
-            <div>
-                <picture>
-                    <source media="(min-width: 600px)" srcset="images/commodity1.jpg"/>
-                    <source media="(max-width: 599px)" srcset="images/commodity1-600_x_900.jpg"/>
-                    <img src="images/commodity1.jpg" alt="image of aroma product">
-                </picture>
-                <button type="button">Buy Now</button>
+            <div class="activity">
+                <h2>Buy more save more</h2>
+                <p>Earn extra points with every purchase that can use towards future discounts. Save big with our membership program! For every </p>
+                <p>$10</p>
+                <p> spent, you'll earn</p>
+                <p>1</p>
+                <p>point. Once you'll earn </p>
+                <p>10</p>
+                <p> points, you'll get </p>
+                <p>5%</p>
+                <p> off your next purchase.</p>
+                <h3>Not a member yet?</h3>
+                <p>Get </p>
+                <p>10%</p>
+                <p> off</p>
+                <p>for your first month's purchase!</p>
+                <button type="button">Join Now</button>
             </div>
-            <div>
-                <picture>
-                    <source media="(min-width: 600px)" srcset="images/commodity2.jpg"/>
-                    <source media="(max-width: 599px)" srcset="images/commodity2-600_x_900.jpg"/>
-                    <img src="images/commodity2.jpg" alt="image of aroma product">
-                </picture>
-                <button type="button">Buy Now</button>
+            <div class="pruduct">
+                <div>
+                    <picture>
+                        <source media="(min-width: 600px)" srcset="images/commodity1.jpg"/>
+                        <source media="(max-width: 599px)" srcset="images/commodity1-600_x_900.jpg"/>
+                        <img src="images/commodity1.jpg" alt="image of aroma product">
+                    </picture>
+                    <button type="button">Buy Now</button>
+                </div>
+                <div>
+                    <picture>
+                        <source media="(min-width: 600px)" srcset="images/commodity2.jpg"/>
+                        <source media="(max-width: 599px)" srcset="images/commodity2-600_x_900.jpg"/>
+                        <img src="images/commodity2.jpg" alt="image of aroma product">
+                    </picture>
+                    <button type="button">Buy Now</button>
+                </div>
+                <div class="pages">
+                    <i class="fa-solid fa-circle"></i>
+                    <i class="fa-regular fa-circle"></i>
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
             </div>
-            <div class="pages">
-                <i class="fa-solid fa-circle"></i>
-                <i class="fa-regular fa-circle"></i>
-                <i class="fa-solid fa-chevron-right"></i>
+        </main>
+        <footer>
+            <div class="contact">
+                <p>Tel: +1 (777) 777 7777</p>
+                <p><a href="#">Join Us</a></p>
+                <p><a href="#">Feedback</a></p>
             </div>
-        </div>
-    </main>
-    <footer>
-        <div class="contact">
-            <p>Tel: +1 (777) 777 7777</p>
-            <p><a href="#">Join Us</a></p>
-            <p><a href="#">Feedback</a></p>
-        </div>
-        <div class="follow">
-            <p>Ins: @dream-night-oil</p>
-            <p>F B: @dream-night-oil</p>
-        </div>
-        <hr>
-        <p>&copy; Copyright Dream Night Aroma Oil All Rights Reserved 2023</p>
-    </footer>
+            <div class="follow">
+                <p>Ins: @dream-night-oil</p>
+                <p>F B: @dream-night-oil</p>
+            </div>
+            <hr>
+            <p>&copy; Copyright Dream Night Aroma Oil All Rights Reserved 2023</p>
+        </footer>
+    </div>
 </body>
 </html>
