--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/342db6fee9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;1,300&family=Sawarabi+Gothic&display=swap" rel="stylesheet">
     <title>Dream Night</title>
 </head>
 <body>
