--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
             </div>
             <hr>
             <p>&copy; Copyright Dream Night Aroma Oil All Rights Reserved 2023</p>
+            <p>All images are taken from <a href="https://unsplash.com/" target="_blank"> Unsplash</a></p>
         </footer>
     </div>
 </body>
