styling the manu to create a collapsible effect

--- a/index.html
+++ b/index.html
@@ -21,16 +21,20 @@
                   </svg>
             </div>
             <h1>Dream Night</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li>Online Store</li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li>Cooperation</li>
-                    <li>Career</li>
-                </ul>
-            </nav>
+            <div class="hamburger">
+                <input type="checkbox" id="menu">
+                <label for="menu"></label>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li>Online Store</li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li>Cooperation</li>
+                        <li>Career</li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <main>
             <div class="promote">
