style the promote part

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;1,300&family=Sawarabi+Gothic&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;1,300;1,400&family=Sawarabi+Gothic&display=swap" rel="stylesheet">
     <title>Dream Night</title>
 </head>
 <body>
@@ -22,6 +22,7 @@
             </div>
             <h1>Dream Night</h1>
             <div class="hamburger">
+                <!-- use checkbox to identify the state of menu -->
                 <input type="checkbox" id="menu">
                 <label for="menu"></label>
                 <nav>
@@ -38,9 +39,11 @@
         </header>
         <main>
             <div class="promote">
-                <p>Join Membership and get</p>
-                <P class="discount">10%</P>
-                <p>off</p>
+                <!-- discount information -->
+                <div>
+                    <p>Join Membership and get</p>
+                    <p><i class="discount">10%</i>off</p>
+                </div>
                 <button type="button">Join Now</button>
             </div>
             <div class="welcome">
