style the welcome part

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
                 <p>
                     The home of luxurious and all-nature aroma oils designed to soothe your senses and transport you to a peaceful statete of mind.
                 </p>
-                <button type="button">Story about us</button>
+                <div class="button">
+                    <button type="button"><a href="about.html">Story about us</a></button>
+                </div>
             </div>
             <div class="service">
                 <div class="statement">
