style the service part

--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
                     <button type="button"><a href="about.html">Story about us</a></button>
                 </div>
             </div>
+            <!-- Service part mixed with text and links, use grid to style it -->
             <div class="service">
+                <h2>Dream a better life</h2>
                 <div class="statement">
-                    <h2>Dream a better life</h2>
                     <p>We pride ourselves on using only the highest quality  ingredients to create our products, ensure that you can experience the full benefits of natural aromatherapy.</p>
                 </div>
                 <div class="equipment">
