style the activity part

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p>
                     The home of luxurious and all-nature aroma oils designed to soothe your senses and transport you to a peaceful statete of mind.
                 </p>
-                <div class="button">
+                <div class="welcome-button">
                     <button type="button"><a href="about.html">Story about us</a></button>
                 </div>
             </div>
@@ -102,21 +102,15 @@
             </div>
             <div class="activity">
                 <h2>Buy more save more</h2>
-                <p>Earn extra points with every purchase that can use towards future discounts. Save big with our membership program! For every </p>
-                <p>$10</p>
-                <p> spent, you'll earn</p>
-                <p>1</p>
-                <p>point. Once you'll earn </p>
-                <p>10</p>
-                <p> points, you'll get </p>
-                <p>5%</p>
-                <p> off your next purchase.</p>
+                <p>Earn extra points with every purchase that can use towards future discounts. Save big with our membership program! For every <i>$10</i> spent, you'll earn <i>1</i> point. Once you'll earn <i>10</i> points, you'll get <i>5%</i> off your next purchase.</p>
                 <h3>Not a member yet?</h3>
-                <p>Get </p>
-                <p>10%</p>
-                <p> off</p>
-                <p>for your first month's purchase!</p>
-                <button type="button">Join Now</button>
+                <div class="discount-info">
+                    <p>Get <i>10%</i> off</p>
+                    <p>for your first month's purchase!</p>
+                </div>
+                <div class="join-button">
+                    <button type="button">Join Now</button>
+                </div>
             </div>
             <div class="pruduct">
                 <div>
