style the footer part

--- a/contact.html
+++ b/contact.html
@@ -106,20 +106,26 @@
                 <p><a href="#">See more FAQs</a></p>
             </div>
         </main>
-        <footer>
-            <div class="contact">
-                <p>Tel: +1 (777) 777 7777</p>
-                <p><a href="#">Join Us</a></p>
-                <p><a href="#">Feedback</a></p>
-            </div>
-            <div class="follow">
-                <p>Ins: @dream-night-oil</p>
-                <p>F B: @dream-night-oil</p>
+    </div>
+    <footer>
+        <div class="wrapper">
+            <div class="footer-info">
+                <div class="contact">
+                    <p>Contact us</p>
+                    <p>Tel: +1 (777) 777 7777</p>
+                    <p><a href="#">Join Us</a></p>
+                    <p><a href="#">Feedback</a></p>
+                </div>
+                <div class="follow">
+                    <p>Follow us</p>
+                    <p>Ins: @dream-night-oil</p>
+                    <p>F B: @dream-night-oil</p>
+                </div>
             </div>
             <hr>
             <p>&copy; Copyright Dream Night Aroma Oil All Rights Reserved 2023</p>
-            <p>All images are taken from <a href="https://unsplash.com/" target="_blank"> Unsplash</a></p>
-        </footer>
-    </div>
+            <p>All images are taken from <a href="https://unsplash.com/" target="_blank"> Unslash</a></p>
+        </div>        
+    </footer>
 </body>
 </html>
