--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <button type="button">Join Now</button>
             </div>
             <div class="welcome">
+                <!-- when screen size is under 600px, use the smaller image -->
                 <picture class="home-banner">
                     <source media="(min-width: 600px)" srcset="images/home-banner.jpg"/>
                     <source media="(max-width: 599px)" srcset="images/home-banner-600_x_399.jpg"/>
@@ -145,14 +146,18 @@
     </main>
     <footer>
         <div class="wrapper">
-            <div class="contact">
-                <p>Tel: +1 (777) 777 7777</p>
-                <p><a href="#">Join Us</a></p>
-                <p><a href="#">Feedback</a></p>
-            </div>
-            <div class="follow">
-                <p>Ins: @dream-night-oil</p>
-                <p>F B: @dream-night-oil</p>
+            <div class="footer-info">
+                <div class="contact">
+                    <p>Contact us</p>
+                    <p>Tel: +1 (777) 777 7777</p>
+                    <p><a href="#">Join Us</a></p>
+                    <p><a href="#">Feedback</a></p>
+                </div>
+                <div class="follow">
+                    <p>Follow us</p>
+                    <p>Ins: @dream-night-oil</p>
+                    <p>F B: @dream-night-oil</p>
+                </div>
             </div>
             <hr>
             <p>&copy; Copyright Dream Night Aroma Oil All Rights Reserved 2023</p>
