--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,67 +8,78 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;1,300;1,400&family=Sawarabi+Gothic&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;1,300;1,400&family=Sawarabi+Gothic&display=swap"
+        rel="stylesheet">
     <title>Dream Night</title>
 </head>
+
 <body>
-    <div class="wrapper">
-        <header>
-            <div class="logo">
-                <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 137.42 59.21">
-                    <path d="M27.77 25.07c.3 10.62-8.33 19.24-18.94 19.53-3.16.09-6.16-.61-8.83-1.89 5.04 6.95 13.32 11.38 22.55 11.12 14.86-.41 26.58-12.8 26.17-27.66C48.3 11.31 35.92-.4 21.05.01 14.57.19 8.68 2.65 4.14 6.61c1.17-.26 2.38-.42 3.62-.45 10.62-.3 19.72 8.3 20.01 18.92Z"/>
-                    <text style="font-family:Broadway,Broadway;font-size:30px" transform="translate(48.8 51.77)"><tspan x="0" y="0" style="letter-spacing:-.03em">r</tspan><tspan x="14.88" y="0">eam</tspan></text>
-                    <path d="m73.01 19.93-4.35 2.83-.13 5.18-4.04-3.26-4.97 1.47 1.86-4.84-2.94-4.28 5.18.27 3.16-4.11 1.34 5.01 4.89 1.73zM103.78 9.33l-3.52 3.81 1.14 5.06-4.71-2.17-4.46 2.64.61-5.15-3.89-3.42 5.08-1.01 2.06-4.76 2.53 4.52 5.16.48zM132.33 22.15l-4.35 2.83-.14 5.18-4.03-3.26-4.97 1.47 1.86-4.84-2.94-4.28 5.18.27 3.16-4.11 1.34 5.01 4.89 1.73z"/>
-                </svg>
-            </div>
-            <h1>Dream Night</h1>
-            <div class="hamburger">
-                <input type="checkbox" id="menu">
-                <label for="menu"></label>
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li>Online Store</li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li>Cooperation</li>
-                        <li>Career</li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        <main>
+    <header class="wrapper">
+        <div class="logo">
+            <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 137.42 59.21">
+                <path
+                    d="M27.77 25.07c.3 10.62-8.33 19.24-18.94 19.53-3.16.09-6.16-.61-8.83-1.89 5.04 6.95 13.32 11.38 22.55 11.12 14.86-.41 26.58-12.8 26.17-27.66C48.3 11.31 35.92-.4 21.05.01 14.57.19 8.68 2.65 4.14 6.61c1.17-.26 2.38-.42 3.62-.45 10.62-.3 19.72 8.3 20.01 18.92Z" />
+                <text style="font-family:Broadway,Broadway;font-size:30px" transform="translate(48.8 51.77)">
+                    <tspan x="0" y="0" style="letter-spacing:-.03em">r</tspan>
+                    <tspan x="14.88" y="0">eam</tspan>
+                </text>
+                <path
+                    d="m73.01 19.93-4.35 2.83-.13 5.18-4.04-3.26-4.97 1.47 1.86-4.84-2.94-4.28 5.18.27 3.16-4.11 1.34 5.01 4.89 1.73zM103.78 9.33l-3.52 3.81 1.14 5.06-4.71-2.17-4.46 2.64.61-5.15-3.89-3.42 5.08-1.01 2.06-4.76 2.53 4.52 5.16.48zM132.33 22.15l-4.35 2.83-.14 5.18-4.03-3.26-4.97 1.47 1.86-4.84-2.94-4.28 5.18.27 3.16-4.11 1.34 5.01 4.89 1.73z" />
+            </svg>
+        </div>
+        <h1>Dream Night</h1>
+        <div class="hamburger">
+            <input type="checkbox" id="menu">
+            <label for="menu"></label>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li>Online Store</li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li>Cooperation</li>
+                    <li>Career</li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="wrapper">
+        <picture class="about-banner">
+            <source media="(min-width: 600px)" srcset="images/about-banner.jpg" />
+            <source media="(max-width: 599px)" srcset="images/about-banner-boo_x_400.jg" />
+            <img src="images/about-banner.jpg" alt="image about our service">
+        </picture>
+        <div class="history">
+            <h2>History of Dream night</h2>
+            <p>Dream Night is an exquisite aroma oil brand designed for young ladies between theages of 20-30 who love
+                to explore DIY formulas.
+            </p>
+            <p>The brand's first offline store opened its doors in Ottawa earlier this year, inviting customers to
+                experience the luxurious scents firsthand.</p>
             <picture>
-                <source media="(min-width: 600px)" srcset="images/about-banner.jpg"/>
-                <source media="(max-width: 599px)" srcset="images/about-banner-boo_x_400.jpg"/>
-                <img src="images/about-banner.jpg" alt="image about our service">
+                <source media="(min-width: 600px)" srcset="images/history-shop.jpg" />
+                <source media="(max-width: 599px)" srcset="images/history-shop-600_x_400.jpg" />
+                <img src="images/history-shop.jpg" alt="image about our shop">
             </picture>
-            <div class="history">
-                <h2>History of Dream night</h2>
-                <p>Dream Night is an exquisite aroma oil brand designed for young ladies between the ages of 20-30 who love to explore DIY formulas.
-                    </p>
-                <p>The brand's first offline store opened its doors in Ottawa earlier this year, inviting customers to experience the luxurious scents firsthand.</p>
-                <picture>
-                    <source media="(min-width: 600px)" srcset="images/history-shop.jpg"/>
-                    <source media="(max-width: 599px)" srcset="images/history-shop-600_x_400.jpg"/>
-                    <img src="images/history-shop.jpg" alt="image about our shop">
-                </picture>
-            </div>
-            <div class="mission">
-                <p>"Help people feel relaxed and achieve a deep, restful sleep."</p>
-                <picture>
-                    <source media="(min-width: 600px)" srcset="images/mission.jpg"/>
-                    <source media="(min-width: 599px)" srcset="images/mission-600_x_400.jpg"/>
-                    <img src="images/mission.jpg" alt="image of our mission">
-                </picture>
-            </div>
-            <div class="vision">
-                <h2>We Hope</h2>
-                <p>To create a world where women can easily and naturally incorporate self care practices into their busy lives, leading to increased happiness, productivity, and overall well-being.</p>
+        </div>
+        <div class="mission">
+            <h2>Our Mission</h2>
+            <p>"Help people feel relaxed and achieve a deep, restful sleep."</p>
+            <picture>
+                <source media="(min-width: 600px)" srcset="images/mission.jpg" />
+                <source media="(min-width: 599px)" srcset="images/mission-600_x_400.jg" />
+                <img src="images/mission.jpg" alt="image of our mission">
+            </picture>
+        </div>
+        <div class="vision">
+            <h2>We Hope</h2>
+            <p>To create a world where women can easily and naturally incorporate self care prctices into their busy lives, leading to increased happiness, productivity, and overall well-beng.</p>
+            <div class="vision-button">
                 <button type="button">Shop now</button>
             </div>
-        </main>
-    </div>
+        </div>
+    </main>
     <footer>
         <div class="wrapper">
             <div class="footer-info">
@@ -86,7 +98,8 @@
             <hr>
             <p>&copy; Copyright Dream Night Aroma Oil All Rights Reserved 2023</p>
             <p>All images are taken from <a href="https://unsplash.com/" target="_blank"> Unslash</a></p>
-        </div>        
+        </div>
     </footer>
 </body>
+
 </html>
