--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,25 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;1,300;1,400&family=Sawarabi+Gothic&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;1,300;1,400&family=Sawarabi+Gothic&display=swap"
+        rel="stylesheet">
     <title>Dream Night</title>
 </head>
+
 <body>
     <div class="wrapper">
         <header>
             <div class="logo">
                 <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 137.42 59.21">
-                    <path d="M27.77 25.07c.3 10.62-8.33 19.24-18.94 19.53-3.16.09-6.16-.61-8.83-1.89 5.04 6.95 13.32 11.38 22.55 11.12 14.86-.41 26.58-12.8 26.17-27.66C48.3 11.31 35.92-.4 21.05.01 14.57.19 8.68 2.65 4.14 6.61c1.17-.26 2.38-.42 3.62-.45 10.62-.3 19.72 8.3 20.01 18.92Z"/>
-                    <text style="font-family:Broadway,Broadway;font-size:30px" transform="translate(48.8 51.77)"><tspan x="0" y="0" style="letter-spacing:-.03em">r</tspan><tspan x="14.88" y="0">eam</tspan></text>
-                    <path d="m73.01 19.93-4.35 2.83-.13 5.18-4.04-3.26-4.97 1.47 1.86-4.84-2.94-4.28 5.18.27 3.16-4.11 1.34 5.01 4.89 1.73zM103.78 9.33l-3.52 3.81 1.14 5.06-4.71-2.17-4.46 2.64.61-5.15-3.89-3.42 5.08-1.01 2.06-4.76 2.53 4.52 5.16.48zM132.33 22.15l-4.35 2.83-.14 5.18-4.03-3.26-4.97 1.47 1.86-4.84-2.94-4.28 5.18.27 3.16-4.11 1.34 5.01 4.89 1.73z"/>
+                    <path
+                        d="M27.77 25.07c.3 10.62-8.33 19.24-18.94 19.53-3.16.09-6.16-.61-8.83-1.89 5.04 6.95 13.32 11.38 22.55 11.12 14.86-.41 26.58-12.8 26.17-27.66C48.3 11.31 35.92-.4 21.05.01 14.57.19 8.68 2.65 4.14 6.61c1.17-.26 2.38-.42 3.62-.45 10.62-.3 19.72 8.3 20.01 18.92Z" />
+                    <text style="font-family:Broadway,Broadway;font-size:30px" transform="translate(48.8 51.77)">
+                        <tspan x="0" y="0" style="letter-spacing:-.03em">r</tspan>
+                        <tspan x="14.88" y="0">eam</tspan>
+                    </text>
+                    <path
+                        d="m73.01 19.93-4.35 2.83-.13 5.18-4.04-3.26-4.97 1.47 1.86-4.84-2.94-4.28 5.18.27 3.16-4.11 1.34 5.01 4.89 1.73zM103.78 9.33l-3.52 3.81 1.14 5.06-4.71-2.17-4.46 2.64.61-5.15-3.89-3.42 5.08-1.01 2.06-4.76 2.53 4.52 5.16.48zM132.33 22.15l-4.35 2.83-.14 5.18-4.03-3.26-4.97 1.47 1.86-4.84-2.94-4.28 5.18.27 3.16-4.11 1.34 5.01 4.89 1.73z" />
                 </svg>
             </div>
             <h1>Dream Night</h1>
@@ -39,12 +48,14 @@
         <main>
             <div class="contact-form">
                 <picture>
-                    <source media="(min-width: 600px)" srcset="images/contact-banner.jpg"/>
-                    <source media="(min-width: 599px)" srcset="images/contact-banner-600_x_377.jpg"/>
+                    <source media="(min-width: 600px)" srcset="images/contact-banner.jpg" />
+                    <source media="(min-width: 599px)" srcset="images/contact-banner-600_x_377.jpg" />
                     <img src="images/contact-banner.jpg" alt="image of night sky">
                 </picture>
-                <p>At Dream Night, we value your feedback and strive to provide the best possible customer experience.</p>
-                <p>Don't hesitate to reach out to us. we're always happy to assist you with any inquiries or concerns.</p>
+                <p>At Dream Night, we value your feedback and strive to provide the best possible customer experience.
+                </p>
+                <p>Don't hesitate to reach out to us. we're always happy to assist you with any inquiries or concerns.
+                </p>
                 <form action="contact.html" method="post">
                     <div>
                         <label for="fullname">Name</label>
@@ -74,34 +85,47 @@
                 <p>Add</p>
                 <p>Wellington St, Ottawa, ON</p>
                 <p>Opening: Mon to Fri 8:00 - 18:00</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.4914178672984!2d-75.71181921012548!3d45.41959436183835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce045a7a4831e5%3A0xcb7f2bab75407e44!2sWellington%20St!5e0!3m2!1sen!2sca!4v1688007870948!5m2!1sen!2sca" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.4914178672984!2d-75.71181921012548!3d45.41959436183835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce045a7a4831e5%3A0xcb7f2bab75407e44!2sWellington%20St!5e0!3m2!1sen!2sca!4v1688007870948!5m2!1sen!2sca"
+                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="statement-info">
-                <p>Please feel free to email us at <a href="mailto:info@dreamnight.com">info@dreamnight.com</a> with any questions or concerns. We aim to respond to all customer inquiries within 24 hours.</p>
-                <p>You can also contact us at Instagram: <a href="https://www.instagram.com/clark_shen22/">@dream-night-oil</a> and Facebook: <a href="https://www.facebook.com/profile.php?id=100090278334237">@dream- night-oil</a></p>
+                <p>Please feel free to email us at <a href="mailto:info@dreamnight.com">info@dreamnight.com</a> with any
+                    questions or concerns. We aim to respond to all customer inquiries within 24 hours.</p>
+                <p>You can also contact us at Instagram: <a
+                        href="https://www.instagram.com/clark_shen22/">@dream-night-oil</a> and Facebook: <a
+                        href="https://www.facebook.com/profile.php?id=100090278334237">@dream- night-oil</a></p>
             </div>
             <div class="faq">
                 <h2>FAQ</h2>
                 <div>
                     <h3>What is Dream Night?</h3>
-                    <p>Dream Night is an aroma oil brand that supports DIY formulas. We offer a wide range of high-quality aroma oils that can be used in a variety of applications, such as diffusers, candles, and beauty products.</p>
+                    <p>Dream Night is an aroma oil brand that supports DIY formulas. We offer a wide range of
+                        high-quality aroma oils that can be used in a variety of applications, such as diffusers,
+                        candles, and beauty products.</p>
                 </div>
                 <div>
                     <h3>How do I use Dream Night aroma oils?</h3>
-                    <p>Our aroma oils can be used in a variety of ways, depending on the application. For example, you can add a few drops of oil to a diffuser to fill your space with a pleasant scent, or mix the oils with carrier oils to create your own beauty and wellness products.
+                    <p>Our aroma oils can be used in a variety of ways, depending on the application. For example, you
+                        can add a few drops of oil to a diffuser to fill your space with a pleasant scent, or mix the
+                        oils with carrier oils to create your own beauty and wellness products.
                     </p>
                 </div>
                 <div>
                     <h3>Are Dream Night products safe?</h3>
-                    <p>Yes, our aroma oils are made with high-quality ingredients and are safe for use in a variety of applications. However, it's important to follow the instructions on the product packaging and use the oils in a well-ventilated area.</p>
+                    <p>Yes, our aroma oils are made with high-quality ingredients and are safe for use in a variety of
+                        applications. However, it's important to follow the instructions on the product packaging and
+                        use the oils in a well-ventilated area.</p>
                 </div>
                 <div>
                     <h3>Where can I buy Dream Night products?</h3>
-                    <p>Our products are available for purchase online through our website, or at our physical store in Ottawa, Canada.</p>
+                    <p>Our products are available for purchase online through our website, or at our physical store in
+                        Ottawa, Canada.</p>
                 </div>
                 <div>
                     <h3>Can I use Dream Night oils for aromatherapy?</h3>
-                    <p>Yes, our oils can be used for aromatherapy purposes. However, we recommend consulting with a qualified aromatherapist before using our oils for therapeutic purposes.</p>
+                    <p>Yes, our oils can be used for aromatherapy purposes. However, we recommend consulting with a
+                        qualified aromatherapist before using our oils for therapeutic purposes.</p>
                 </div>
                 <p><a href="#">See more FAQs</a></p>
             </div>
@@ -125,7 +149,8 @@
             <hr>
             <p>&copy; Copyright Dream Night Aroma Oil All Rights Reserved 2023</p>
             <p>All images are taken from <a href="https://unsplash.com/" target="_blank"> Unslash</a></p>
-        </div>        
+        </div>
     </footer>
 </body>
+
 </html>
