style the banner and introduction of contact page

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         <h1>Dream Night</h1>
         <div class="hamburger">
             <input type="checkbox" id="menu">
-            <label for="menu"></label>
+            <label for="menu" class="nav-label"></label>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
