--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="hamburger">
             <!-- use checkbox to identify the state of menu -->
             <input type="checkbox" id="menu">
-            <label for="menu"></label>
+            <label for="menu" class="nav-label"></label>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
