--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <a class="wrapper" href="#maincontent">Skip to Content &darr;</a>
     <header class="wrapper">
         <div class="logo">
             <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 137.42 59.21">
