--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         rel="stylesheet">
     <title>Dream Night</title>
 </head>
-
 <body>
+    <a class="wrapper" href="#maincontent">Skip to Content &darr;</a>
     <header class="wrapper">
         <div class="logo">
             <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 137.42 59.21">
@@ -61,7 +61,7 @@
                 <source media="(max-width: 599px)" srcset="images/home-banner-600_x_399.jpg" />
                 <img src="images/home-banner.jpg" alt="image of aroma oil diffuser">
             </picture>
-            <h2>Welcome to Dream Night</h2>
+            <h2 id="maincontent">Welcome to Dream Night</h2>
             <p>
                 The home of luxurious and all-nature aroma oils designed to soothe your senses and transport you to a
                 peaceful statete of mind.
