change images alt info

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         <picture class="about-banner">
             <source media="(min-width: 600px)" srcset="images/about-banner.jpg" />
             <source media="(max-width: 599px)" srcset="images/about-banner-boo_x_400.jg" />
-            <img src="images/about-banner.jpg" alt="image about our service">
+            <img src="images/about-banner.jpg" alt="image of us">
         </picture>
         <div class="history">
             <h2>History of Dream night</h2>
@@ -61,7 +61,7 @@
             <picture>
                 <source media="(min-width: 600px)" srcset="images/history-shop.jpg" />
                 <source media="(max-width: 599px)" srcset="images/history-shop-600_x_400.jpg" />
-                <img src="images/history-shop.jpg" alt="image about our shop">
+                <img src="images/history-shop.jpg" alt="image of our shop">
             </picture>
         </div>
         <div class="mission">
