--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <picture>
                     <source media="(min-width: 600px)" srcset="images/packaged-oil.jpg" />
                     <source media="(max-width: 599px)" srcset="images/packaged-oil-600_x_900.jpg" />
-                    <img src="images/packaged-oil.jpg" alt="image of aroma oil equipment">
+                    <img src="images/packaged-oil.jpg" alt="image of aroma oil packaged-oil">
                 </picture>
                 <p><a href="#">Packaged Oil</a></p>
             </div>
@@ -99,7 +99,7 @@
                 <picture>
                     <source media="(min-width: 600px)" srcset="images/oil-formula.jpg" />
                     <source media="(max-width: 599px)" srcset="images/oil-formula-600_x_900.jpg" />
-                    <img src="images/oil-formula.jpg" alt="image of aroma oil equipment">
+                    <img src="images/oil-formula.jpg" alt="image of aroma oil formula">
                 </picture>
                 <p><a href="#">Original oil & Formula</a></p>
             </div>
